--- a/aktivointi/_posts/2015-07-11-pussukat.md
+++ b/aktivointi/_posts/2015-07-11-pussukat.md
@@ -3,7 +3,7 @@ title: "Pussukat"
 layout: article
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/0Po5WkVGiBCalOlexlqqnZu24-us7SQlR6_ecTeTzOSYXaS2JeKdJ18gTorIm32_50ViwWyGuAwFJETMyzvHyeOkD5G_Pnyiump9GqY2ap85jY96dIpTalfXaAn7Wb-ccpg6VqLUPnsIXrY9esv4txZJ3BZ02NkCqOjdICvuscDv_b4g5Mq-OKMpIGqUkHto_HkXEcL2--4MDeIFZPw9FOpZH81eKnaCS9rnDWng9TG1N0hnrv79ruMnOSk4LkQ_rT8ciVWh03us6kkRRm4tqVuFfaEJOJygVgeEEwkxoU6dSQQIbrSoVl_lOVWa8iISZNORdlGzXS-uvGvq3yHh4AallobdwmJyw1T3Cl0CntRAHHB6wwVPTPsGRpue7W1qwd3o5heowmgTnWJPmMPK4pG_PQ8WvV3-6V36IQgLGrkIFRxoXsrGRMMZnbzYpnuIVa1aNDZOgotD2tD220zuT-w5hDkUiKQcT7WYKpkMbWLUfKbYyeSqdBqnyJE2Gg7cKASRZwBnrqrMzVhT_TQN8BVKdSDs5F5cfkQK2-2EQvHNKBmW_KD486fIddrZcdJ1rXeI=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADRP7pxeR-efNpNbkKdWKjUa/aktivointi/pussukat/DS01550-245px.jpg
   thumb:
 ---
 
@@ -29,72 +29,72 @@ Tässä tulee ottaa huomioon koiran kuonon koko. Lyhytkuonoisille koirille riitt
 
 ###### Tehtävä 1: Aloitimme helposti...
 
-[![](https://lh3.googleusercontent.com/vMqdWYMaFXaxLAenze3Cc2-dtRMXRrfhzznPe_O6SaqdT18CVVAgUH75sITYeVpB7tdsIJqEBo0r9aLD8l_2NNtIpxTqk0vMumuMLUOYnA6RGzldHMgGb_VxniRonzTFNabJ3X3APMFUwLPxwFYQZ1_byB6dxcz0pjuAE_UtHt86_DV0aamu8bf4wR6zCDGemCE1NERNAgM2gNrIniZmkrzO_PChcCnJqHLLsK1bLpdcpM_nQGKhPcsXVwbraYZXkCtx7RRBHBDbCYzXXBQmv4uHWxuDFg84G-H2wFJXVxYuok_-F3mbzgLrWKd4J3wc92_ba7g0DLU2iMs4OrsWSN7bXq3PyuRTVlf0f8QDOU-zYZcIgtbzShYZfJ9MBKwFhAAr65e9abjAdgsCRmCow-g-LnrXscGHl3xFa7JU0pCZGq7j57algXVNpf741QyKonVj7-3FDffB6Gh91EyEQP2ssEbbnP1rKm6rSPLj0hNwzpwsz8xcIu6Mx-q__992x23f0biNkPLDDyMafViCLhYaOQTixZR_7v680kCInvuB-Gw2rywLsIDGJ4Ctrpk3WPkL=w800)](https://lh3.googleusercontent.com/vMqdWYMaFXaxLAenze3Cc2-dtRMXRrfhzznPe_O6SaqdT18CVVAgUH75sITYeVpB7tdsIJqEBo0r9aLD8l_2NNtIpxTqk0vMumuMLUOYnA6RGzldHMgGb_VxniRonzTFNabJ3X3APMFUwLPxwFYQZ1_byB6dxcz0pjuAE_UtHt86_DV0aamu8bf4wR6zCDGemCE1NERNAgM2gNrIniZmkrzO_PChcCnJqHLLsK1bLpdcpM_nQGKhPcsXVwbraYZXkCtx7RRBHBDbCYzXXBQmv4uHWxuDFg84G-H2wFJXVxYuok_-F3mbzgLrWKd4J3wc92_ba7g0DLU2iMs4OrsWSN7bXq3PyuRTVlf0f8QDOU-zYZcIgtbzShYZfJ9MBKwFhAAr65e9abjAdgsCRmCow-g-LnrXscGHl3xFa7JU0pCZGq7j57algXVNpf741QyKonVj7-3FDffB6Gh91EyEQP2ssEbbnP1rKm6rSPLj0hNwzpwsz8xcIu6Mx-q__992x23f0biNkPLDDyMafViCLhYaOQTixZR_7v680kCInvuB-Gw2rywLsIDGJ4Ctrpk3WPkL=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACCTOP5f_fxs1RhgJUiva2ha/aktivointi/pussukat/DS01371-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABIsPfQ09PvnM09Kv4yYvBTa/aktivointi/pussukat/DS01371.jpg)
 
-[![](https://lh3.googleusercontent.com/yP2KGcDHh_Zw6zZihQHHZtVABZATdPMU8hbiVDUjN4wljTV05K41QIDuiQz8c1X9fj_vo4baOHt2ULCr7lziBAzVLsCXPEFLEGjwPrA4jLpUHRWdbk6SFe9tLfH3WnRm3wBiMalfto5N9oSBKi1mAWoI0P6RjIH8AwqNG6rGQGnTyUxT1krAU906mpRdtSNDrnNTbATDuRySbE3yWjJ0M_OVKQFoCLeaI71H1GLv-13FbyVS7zmi6vkkWowqPTbeYUO6pOsjDbuq5tun_620WKDu8lPSzMI1SqtxX4hrCi7FJJ-Ji2ORsHRcdSAmIcPpeW1F0y3UbFY5uXnTz8MBOhS3zdKXuxiVDvctq1wAEERgsVsGvNS3mcgCDi2xwuDC2w4vtZw7j4Gu32rvfuAfLVpkIObE-36-f3YjyZf1C_awuYFcx665P9eSKwXLcOuF7qW_B3uHYa4diMs7s3fqtMcqR5DzZMVIyieqR-INcKYjxlQTsKQEKIg5X_ICcFYQUBHDJ7_eTkf3IcEhAeGp_l3QwrQuiH0RqrdS6xk04dXLzU20sjweRmMJN7mGkQzK9bOI=w800)](https://lh3.googleusercontent.com/yP2KGcDHh_Zw6zZihQHHZtVABZATdPMU8hbiVDUjN4wljTV05K41QIDuiQz8c1X9fj_vo4baOHt2ULCr7lziBAzVLsCXPEFLEGjwPrA4jLpUHRWdbk6SFe9tLfH3WnRm3wBiMalfto5N9oSBKi1mAWoI0P6RjIH8AwqNG6rGQGnTyUxT1krAU906mpRdtSNDrnNTbATDuRySbE3yWjJ0M_OVKQFoCLeaI71H1GLv-13FbyVS7zmi6vkkWowqPTbeYUO6pOsjDbuq5tun_620WKDu8lPSzMI1SqtxX4hrCi7FJJ-Ji2ORsHRcdSAmIcPpeW1F0y3UbFY5uXnTz8MBOhS3zdKXuxiVDvctq1wAEERgsVsGvNS3mcgCDi2xwuDC2w4vtZw7j4Gu32rvfuAfLVpkIObE-36-f3YjyZf1C_awuYFcx665P9eSKwXLcOuF7qW_B3uHYa4diMs7s3fqtMcqR5DzZMVIyieqR-INcKYjxlQTsKQEKIg5X_ICcFYQUBHDJ7_eTkf3IcEhAeGp_l3QwrQuiH0RqrdS6xk04dXLzU20sjweRmMJN7mGkQzK9bOI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACwH0-8d-16FtE3UvJASMWja/aktivointi/pussukat/DS01382-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADRz2ruleyI4j4RcnrCrxYMa/aktivointi/pussukat/DS01382.jpg)
 
 ###### Tehtävä 2: Pussukka pystyssä, suu auki
 
-[![](https://lh3.googleusercontent.com/eKjHa0WpwtMqtJv43xKVvtKqTYdI60HvbgyjW6r9MauDzPCSC6bWgwUz-rf4XGjuD8GFwXzCazY8eq03SEzP93qRYR1KS47OtTFw0qxNYCXCaWnR3fLhgy0ByVQyIz9o4SBtk9Grpdb478UBsxilD3WnUkoMzhr-5LpLaF9CMQciGU1LS5urp54ysNdA2Si2w87-y7FMG71vlz9R5-EnCyCpsLsWdPQId9vEm0xLGOJGjJgn4OqqxHsjKZAyxx8wLtvW-wHJstV5tR8wd3wUBTM9RdkK673o7oRTghvmOTRCJE-5fP2T4Yv77NjteiRzmCuMpAvDZT3-CvE_wujto0EOx25eUNHQ8XYvkv6JaFdZR2TMKN2373syYGX2qcx9vGyrcg62cS7XWHoFX8DqOfTW2ysHvyX1BnmtsXoBEih7BqVJXvVsFd29nJzkO2jC25yqd0AD1Z3kp97iePHHFPQNJUQJzg3Ht5BeeXVKlGNTKt3LTeXNy64VB-UfJGSomD1CUAT190PmXlmSvc2xcwl2vlgvtT6t9NGBvBS8VqGrBu5eIxOtKCKYnkqKkWSPc18K=w800)](https://lh3.googleusercontent.com/eKjHa0WpwtMqtJv43xKVvtKqTYdI60HvbgyjW6r9MauDzPCSC6bWgwUz-rf4XGjuD8GFwXzCazY8eq03SEzP93qRYR1KS47OtTFw0qxNYCXCaWnR3fLhgy0ByVQyIz9o4SBtk9Grpdb478UBsxilD3WnUkoMzhr-5LpLaF9CMQciGU1LS5urp54ysNdA2Si2w87-y7FMG71vlz9R5-EnCyCpsLsWdPQId9vEm0xLGOJGjJgn4OqqxHsjKZAyxx8wLtvW-wHJstV5tR8wd3wUBTM9RdkK673o7oRTghvmOTRCJE-5fP2T4Yv77NjteiRzmCuMpAvDZT3-CvE_wujto0EOx25eUNHQ8XYvkv6JaFdZR2TMKN2373syYGX2qcx9vGyrcg62cS7XWHoFX8DqOfTW2ysHvyX1BnmtsXoBEih7BqVJXvVsFd29nJzkO2jC25yqd0AD1Z3kp97iePHHFPQNJUQJzg3Ht5BeeXVKlGNTKt3LTeXNy64VB-UfJGSomD1CUAT190PmXlmSvc2xcwl2vlgvtT6t9NGBvBS8VqGrBu5eIxOtKCKYnkqKkWSPc18K=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABCLq3B_d3EIUHOkaPB0Pr2a/aktivointi/pussukat/DS01383-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAfzkK-9Zk_2OYnODAHhw2-a/aktivointi/pussukat/DS01383.jpg)
 
-[![](https://lh3.googleusercontent.com/x6dLyo9rJ-c7QNeUH7gWcRcUJJq9ntsH-D7Ra5-Ub2Qu5frEpkuqTNRDHOANtuUSlVY048BDGWaRIUIHAitp9BXN4dJMYMq0XpCsQQXBoZcVqfKWjxTciP1W2Il-5o7W33_DFSrtEKUiDEOe6Eiaaunnsu89nhEzfIHpGvDvg6-bf8DhKyxuFMzxeVsDnFrC3sr2qehpAPZrYO1DtFCSzCocoAUKBkNkC7J62siLkbpyJ5vUojr-Qe595WAq2zmpu1VDhB9KP2ekyT5cUODaDN74agBKe8DJZ4-4CL3_oEMYM1KZ_T0d5O__uzX8SlVBXjs7HBeRO9BszaDuwxsfZqcjBUN-LRB2gVJyPxp9HvdDfw3PCvjtA3LMgwat2ASrKdtkQANe5w13dDNnBdXj0CbY6_IUR124u_MzkrrB7Hzi7FQ0i9xCuOL0aIHsVfpNLqqPwO9OGBWSNGfzpeDzDfieFEJ_SO9OhGlpDpAU7SzjXdO583Lz_evAS6RaM7fjf6rU-OjwfaKFZDTkC3qq5a4Jh2FX4pN1WXfZviR8fPVX5r_fprZ-hnc5vevBr9eT5joe=w800)](https://lh3.googleusercontent.com/x6dLyo9rJ-c7QNeUH7gWcRcUJJq9ntsH-D7Ra5-Ub2Qu5frEpkuqTNRDHOANtuUSlVY048BDGWaRIUIHAitp9BXN4dJMYMq0XpCsQQXBoZcVqfKWjxTciP1W2Il-5o7W33_DFSrtEKUiDEOe6Eiaaunnsu89nhEzfIHpGvDvg6-bf8DhKyxuFMzxeVsDnFrC3sr2qehpAPZrYO1DtFCSzCocoAUKBkNkC7J62siLkbpyJ5vUojr-Qe595WAq2zmpu1VDhB9KP2ekyT5cUODaDN74agBKe8DJZ4-4CL3_oEMYM1KZ_T0d5O__uzX8SlVBXjs7HBeRO9BszaDuwxsfZqcjBUN-LRB2gVJyPxp9HvdDfw3PCvjtA3LMgwat2ASrKdtkQANe5w13dDNnBdXj0CbY6_IUR124u_MzkrrB7Hzi7FQ0i9xCuOL0aIHsVfpNLqqPwO9OGBWSNGfzpeDzDfieFEJ_SO9OhGlpDpAU7SzjXdO583Lz_evAS6RaM7fjf6rU-OjwfaKFZDTkC3qq5a4Jh2FX4pN1WXfZviR8fPVX5r_fprZ-hnc5vevBr9eT5joe=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAKlPSUT4c7BlpJsP0zrJY3a/aktivointi/pussukat/DS01425-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD7mz_1ZLro4fHj1tJGpu4Qa/aktivointi/pussukat/DS01425.jpg)
 
 ###### Tehtävä 3: Kyljellään ja lytättynä
 
-[![](https://lh3.googleusercontent.com/bN5aNZ8vpYZ4Lb8d0h95AdkWOO_T8QKoPM2bZwgwFuQb7WOaKnelGhTplhPhpYckngW9gRPMzu60tNHbzp9et3ZvRT4BxZNF7VwsV8QRnKxekzh9J8LOgWwMBCMW9yHfivJE3XzrO2ETNQAqx3owd0csmaSoRtG20vC7pyf94mMgxVFN8aeSY1W74NKKK5klGgxSo6qK4puvoeLJXWgzX2R5Jo5laC86SFfr9phLiSeNOV6-DvGkIqeVEf5gtIC8oTuasAsUPTcR9KXmcL77S9Bf-ChJT5h8Mzyfqa4EGkG5zSl2nm64EPBQd8IsEXtJ-1Ond3-U1YkaLUs5pXE06UFlDCOX_by5AtReWahty9HRnKbc-zwR6VSA8fBWPJAnebpcRo1hw_3uL7oGhTHH73t_T2jks6cSc_cLax_r-IXuWju-G2mqHfoe76Ohhi7ZNSVQzUDTgoJ92a4442YOHFzk0a7eUUeZT6S3vfuSQBVlbISoZsxyugmIvQgT1dL0-bfFmMWqw0sTSfSaMKc7Y2ErcZdXcEm_8LKwULZKrzP3Dbg57Jx282BXbZiQJXKfm2HP=w800)](https://lh3.googleusercontent.com/bN5aNZ8vpYZ4Lb8d0h95AdkWOO_T8QKoPM2bZwgwFuQb7WOaKnelGhTplhPhpYckngW9gRPMzu60tNHbzp9et3ZvRT4BxZNF7VwsV8QRnKxekzh9J8LOgWwMBCMW9yHfivJE3XzrO2ETNQAqx3owd0csmaSoRtG20vC7pyf94mMgxVFN8aeSY1W74NKKK5klGgxSo6qK4puvoeLJXWgzX2R5Jo5laC86SFfr9phLiSeNOV6-DvGkIqeVEf5gtIC8oTuasAsUPTcR9KXmcL77S9Bf-ChJT5h8Mzyfqa4EGkG5zSl2nm64EPBQd8IsEXtJ-1Ond3-U1YkaLUs5pXE06UFlDCOX_by5AtReWahty9HRnKbc-zwR6VSA8fBWPJAnebpcRo1hw_3uL7oGhTHH73t_T2jks6cSc_cLax_r-IXuWju-G2mqHfoe76Ohhi7ZNSVQzUDTgoJ92a4442YOHFzk0a7eUUeZT6S3vfuSQBVlbISoZsxyugmIvQgT1dL0-bfFmMWqw0sTSfSaMKc7Y2ErcZdXcEm_8LKwULZKrzP3Dbg57Jx282BXbZiQJXKfm2HP=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADbTU10L1p8q48xCG-QT-o4a/aktivointi/pussukat/DS01402-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAR6tRuFNDaetEAZbll3H93a/aktivointi/pussukat/DS01402.jpg)
 
-[![](https://lh3.googleusercontent.com/ohKl40rLMN1cGxpK4XWAtWcbIbZ2cSyKXZn5pQMADE8tiND_VTwPxNx0a_JAIr_mVe6hV9KraVeGXRXlSJKyzFY-J9gts3uB_3H_tX2PkBoXqwKp2CD4tFJoWJTtF3Jl_3fiz9VRjTXJeAhMhI73wez0zwOzA9s6mf9I_tpCORNodLwdp5NcYHijBQpCBWR5zGwCF2cd-xchEkJc-8Id2HC2hVebQd-QAdj69FxL-BJ28qmqfWFYBPe7LaA7gdiEq5NjNw4elZECoLR3hL5yXAg3UR6HEMkgBHOOUxTGNKf2zjcJJPuCZAAjPzCWjAeF7_BB5agPsNNiLeC-Cg9usgWoRrzolYj8cvkT8ineVaAoplF-nYOgU9aBrwUKin6J1acwp0fMqVYbdJ6ihlO_UGyA-AHLEpM_fvznNLJylirhFMmdj1ffAo3WKllXtVtvepmyHr5W_wf2WeE7J67KzZ65ghA_Xt-l3Q4ZF0qmwvf7_RrPwo3xIDIbj-n75uFqS-SpPpKiLGbEdL_BTv9wzeubuxyIrWwGnV6iS7o8vzdcvQ9pJ8onj24yzLtmtQQsXjs0=w800)](https://lh3.googleusercontent.com/ohKl40rLMN1cGxpK4XWAtWcbIbZ2cSyKXZn5pQMADE8tiND_VTwPxNx0a_JAIr_mVe6hV9KraVeGXRXlSJKyzFY-J9gts3uB_3H_tX2PkBoXqwKp2CD4tFJoWJTtF3Jl_3fiz9VRjTXJeAhMhI73wez0zwOzA9s6mf9I_tpCORNodLwdp5NcYHijBQpCBWR5zGwCF2cd-xchEkJc-8Id2HC2hVebQd-QAdj69FxL-BJ28qmqfWFYBPe7LaA7gdiEq5NjNw4elZECoLR3hL5yXAg3UR6HEMkgBHOOUxTGNKf2zjcJJPuCZAAjPzCWjAeF7_BB5agPsNNiLeC-Cg9usgWoRrzolYj8cvkT8ineVaAoplF-nYOgU9aBrwUKin6J1acwp0fMqVYbdJ6ihlO_UGyA-AHLEpM_fvznNLJylirhFMmdj1ffAo3WKllXtVtvepmyHr5W_wf2WeE7J67KzZ65ghA_Xt-l3Q4ZF0qmwvf7_RrPwo3xIDIbj-n75uFqS-SpPpKiLGbEdL_BTv9wzeubuxyIrWwGnV6iS7o8vzdcvQ9pJ8onj24yzLtmtQQsXjs0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABm5mMd6tEy2L88m1ByPdsea/aktivointi/pussukat/DS01393-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC5nrGSlUg8Ghf0KaJ5NiQaa/aktivointi/pussukat/DS01393.jpg)
 
 ###### Tehtävä 4: Reunat käännettynä sisäänpäin ja namit reunojen sisällä
 
-[![](https://lh3.googleusercontent.com/zdYQM8cyO5YW6Fw4vZR5E4spq9W__4pUFiDUgwngeUMTUVg0w0OCXJAlQn0yv__6EKMezVxaM6MpMz5ngjF-LDbiGsdtMJFtMXGFWvv1HgKvF2J0ODc5StwkPXVv1FZXURzgNIMgHvWerCi7k2b0Tp93RkKMAQvkYeHJi0V4sD8jNx3bMwSQ0itvbqXXMxc080IRoIN0iuOWGVvm-kzYUF3wBNNyeXJoPFYlAuPk0WaAOMUzhCIJKGKZ2bV8c1osONUE5YNd52RU3gIvCsJFJcyx07tawkO37zMQs2YiCyx5Rtw5sgsBcbdDvJIQCIrjshO6z-iIJCs9PWsw3-V1ZINCS28Q0YtjzRn30CMbL37SHeGC34hcE2QVMKd7qM1QYSwCgpuLqBX02YQMzv7FyB2OwRVe39Z4kPQvnZ7WGdMB9DhM48GvUiZJoaJ-fD49xkVvkv2Ofjk0jgr9JHv-DSv-P_4XxeDohATvnB88IsypWF7ZB7BkgMCv2m8RlAlOL7YDgI12Q6WVa-WJWh8nvXizGQniyR1sHwY9QglqyO3G6gqo0Qfau83dj3iVlzuiFRhP=w800)](https://lh3.googleusercontent.com/zdYQM8cyO5YW6Fw4vZR5E4spq9W__4pUFiDUgwngeUMTUVg0w0OCXJAlQn0yv__6EKMezVxaM6MpMz5ngjF-LDbiGsdtMJFtMXGFWvv1HgKvF2J0ODc5StwkPXVv1FZXURzgNIMgHvWerCi7k2b0Tp93RkKMAQvkYeHJi0V4sD8jNx3bMwSQ0itvbqXXMxc080IRoIN0iuOWGVvm-kzYUF3wBNNyeXJoPFYlAuPk0WaAOMUzhCIJKGKZ2bV8c1osONUE5YNd52RU3gIvCsJFJcyx07tawkO37zMQs2YiCyx5Rtw5sgsBcbdDvJIQCIrjshO6z-iIJCs9PWsw3-V1ZINCS28Q0YtjzRn30CMbL37SHeGC34hcE2QVMKd7qM1QYSwCgpuLqBX02YQMzv7FyB2OwRVe39Z4kPQvnZ7WGdMB9DhM48GvUiZJoaJ-fD49xkVvkv2Ofjk0jgr9JHv-DSv-P_4XxeDohATvnB88IsypWF7ZB7BkgMCv2m8RlAlOL7YDgI12Q6WVa-WJWh8nvXizGQniyR1sHwY9QglqyO3G6gqo0Qfau83dj3iVlzuiFRhP=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADMwXR0NxL2M3NNU2A5Hpt-a/aktivointi/pussukat/DS01433-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC6-FZo8H8g9SRbtxadZlFZa/aktivointi/pussukat/DS01433.jpg)
 
-[![](https://lh3.googleusercontent.com/5OspxrLmsr1gjMcms2jzQEerZhCj4QE8Ju_yPYu-zFAo1OSqlLYXcZB0cO01vqHNlwpqpbokmutbDqjS5VQP5sx17Zah_pyiNVNnmylNPAXTbGqhA_flOFu-8D0EZbgjn4BF02kb4uLaB0Js1lzQerBFFWRWF-9wXuuMCbLfItM2-hv8Z9047ELCShNGSzEXWmWP_9IEHUzA4fZckKm35UQhl9D578c-scJf8-9y16IhFO7UcsJqF5SedxZnXQC7ZRfTbTjfIFJcTYywyLyJ5dDQQ77e73dDxoxYt61RqQdCPYbAohxmbqPdAGxoruxHcENbLKqjD2VA3q5slxnlbtoQirXyUmC1QS-NUDVldI-2yk0rtTTh9Jp_F_BmOj_dojfQAx_TInGgdIOoXkXsaEYaRfOj2a2bUO63s7W5r2V138U7Zx76DG5kz0XGMnrvvmXRSLGfbwiJ1te70z0yv-YF5N2iP9qMFJ18QBDIc38dHWrek1wQrcQxNdF9BTXdy9OuGiHtH9qg8s5cjXJWK-Tlfxf03uI8D3kpqFPhdk7UiO6h7DpN41nB3pkLIXBDKaGX=w800)](https://lh3.googleusercontent.com/5OspxrLmsr1gjMcms2jzQEerZhCj4QE8Ju_yPYu-zFAo1OSqlLYXcZB0cO01vqHNlwpqpbokmutbDqjS5VQP5sx17Zah_pyiNVNnmylNPAXTbGqhA_flOFu-8D0EZbgjn4BF02kb4uLaB0Js1lzQerBFFWRWF-9wXuuMCbLfItM2-hv8Z9047ELCShNGSzEXWmWP_9IEHUzA4fZckKm35UQhl9D578c-scJf8-9y16IhFO7UcsJqF5SedxZnXQC7ZRfTbTjfIFJcTYywyLyJ5dDQQ77e73dDxoxYt61RqQdCPYbAohxmbqPdAGxoruxHcENbLKqjD2VA3q5slxnlbtoQirXyUmC1QS-NUDVldI-2yk0rtTTh9Jp_F_BmOj_dojfQAx_TInGgdIOoXkXsaEYaRfOj2a2bUO63s7W5r2V138U7Zx76DG5kz0XGMnrvvmXRSLGfbwiJ1te70z0yv-YF5N2iP9qMFJ18QBDIc38dHWrek1wQrcQxNdF9BTXdy9OuGiHtH9qg8s5cjXJWK-Tlfxf03uI8D3kpqFPhdk7UiO6h7DpN41nB3pkLIXBDKaGX=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD_F79EiQg-CU7zNyPBHyB1a/aktivointi/pussukat/DS01480-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB1GstT3WGvFWBB96rELIHna/aktivointi/pussukat/DS01480.jpg)
 
 ###### Tehtävä 5: Reunat käännettynä ulospäin, pussi ylösalaisin ja namit reunojen sisällä
 
-[![](https://lh3.googleusercontent.com/m-JRjFiQENgSYNHKaiQ5xtYNchBanJpjj7aD6AokrjBlb0X0npCL1SIse2RFiPjoksRopodEl8WRQMxCBFyZDBye0vI7OrYcTepPCvC7M68owlRR7Iq6ZpM0oTP7RAlF5Skl5z76Tb1X43ZiljG1jkyzBHMbXuWJY2miRuhhFhT9zjrvm7AikGu9-y2rdbN2RANTPTZdgbUDH1IRHPZGejf0hVJO9u_RIh6wQhzc51jrYjZz19B8p_Brv0kw2WSjLXO1vW9hJqwCJJunX1oMIAkMt1W-6i2hWLXGSn5OjQxbB_VJlCDK3-YPmtYJqc1tqSX699zABtXCBvrHBeBbxBmrK7M3EOcL-66tnCLaueJhoBO6v_UWCtQtSO3p2s4f72f28fBDRH1b-mtA317RsZtOqiAn_29MGoFff4k76SM_CklvyxCSOdIliZL5Rf7iunOcBgwFda5_L13RqjyL3jXAf4nFt3iKaGSelGDMMRviooHaT9uNIBBjBnKHSTvPWh3m_LTkIvC1AQ6Tt792YLWoVM-GrpsBI_MCiJGx_U0ACuNkohJAXFvgEUhnzhn1nmSz=w800)](https://lh3.googleusercontent.com/m-JRjFiQENgSYNHKaiQ5xtYNchBanJpjj7aD6AokrjBlb0X0npCL1SIse2RFiPjoksRopodEl8WRQMxCBFyZDBye0vI7OrYcTepPCvC7M68owlRR7Iq6ZpM0oTP7RAlF5Skl5z76Tb1X43ZiljG1jkyzBHMbXuWJY2miRuhhFhT9zjrvm7AikGu9-y2rdbN2RANTPTZdgbUDH1IRHPZGejf0hVJO9u_RIh6wQhzc51jrYjZz19B8p_Brv0kw2WSjLXO1vW9hJqwCJJunX1oMIAkMt1W-6i2hWLXGSn5OjQxbB_VJlCDK3-YPmtYJqc1tqSX699zABtXCBvrHBeBbxBmrK7M3EOcL-66tnCLaueJhoBO6v_UWCtQtSO3p2s4f72f28fBDRH1b-mtA317RsZtOqiAn_29MGoFff4k76SM_CklvyxCSOdIliZL5Rf7iunOcBgwFda5_L13RqjyL3jXAf4nFt3iKaGSelGDMMRviooHaT9uNIBBjBnKHSTvPWh3m_LTkIvC1AQ6Tt792YLWoVM-GrpsBI_MCiJGx_U0ACuNkohJAXFvgEUhnzhn1nmSz=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADJmhAkQOqL20Ivw_TPHhKla/aktivointi/pussukat/DS01454-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAkahSl8ztCSCIdKUTEKtQXa/aktivointi/pussukat/DS01454.jpg)
 
-[![](https://lh3.googleusercontent.com/vfle21b-Kb1cMVgSTgNZdgwfu3pMlfm4JZ6wUXHSZD_UQwT62uryTpkZlZKONCE15uaI4UllajjikSsM5aODHF7pnyODxsLwxkkeAiJl8VtUVjX0hNGbMXZaGlR-esqYZwR3JzuNvLxllsyKK8wl395Xi30UlCmLlKiiKrODK44HKoCqHbktLIXdjBHJOmA9IaKVLzeWZreafowTeRgAAqqqFaas6KwfU5grPRBA157ZTCG3ZohkK7yJoNwQHiFC8lporWofBIdCzvz_m8fSW5DPiQzvj_XdcwPrSuR9_C6J8oMIsGhsiJV5maqNhK0q1irNF7R9bv7faRKmQ9YOVngdgtC9jxg-fFJb_pNk063GqOe7v4gyHlnIc96HjDj2Ifr3a9X86kORsIAVjl7slNnGBRUQCQy_fdmmBgBkan_lHpFbZW11IeM0OFI4hal0JFDPQYmFu6YF1tF4kR1q7qLCJ2tOQdPHLMdaK0E9nho4goZX8pdKDOc9Hs_PAD0mOfHBB7HXyG2RayQlhTRWaOmYJ10rK2yAZbZYpGNHMozxj3-r0iTdk18KJwqBs5_hbz9_=w800)](https://lh3.googleusercontent.com/vfle21b-Kb1cMVgSTgNZdgwfu3pMlfm4JZ6wUXHSZD_UQwT62uryTpkZlZKONCE15uaI4UllajjikSsM5aODHF7pnyODxsLwxkkeAiJl8VtUVjX0hNGbMXZaGlR-esqYZwR3JzuNvLxllsyKK8wl395Xi30UlCmLlKiiKrODK44HKoCqHbktLIXdjBHJOmA9IaKVLzeWZreafowTeRgAAqqqFaas6KwfU5grPRBA157ZTCG3ZohkK7yJoNwQHiFC8lporWofBIdCzvz_m8fSW5DPiQzvj_XdcwPrSuR9_C6J8oMIsGhsiJV5maqNhK0q1irNF7R9bv7faRKmQ9YOVngdgtC9jxg-fFJb_pNk063GqOe7v4gyHlnIc96HjDj2Ifr3a9X86kORsIAVjl7slNnGBRUQCQy_fdmmBgBkan_lHpFbZW11IeM0OFI4hal0JFDPQYmFu6YF1tF4kR1q7qLCJ2tOQdPHLMdaK0E9nho4goZX8pdKDOc9Hs_PAD0mOfHBB7HXyG2RayQlhTRWaOmYJ10rK2yAZbZYpGNHMozxj3-r0iTdk18KJwqBs5_hbz9_=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAcdcSQtkAB0VoBT0GvRlLta/aktivointi/pussukat/DS01455-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAf7HaARtZ77gZsXYpzllHba/aktivointi/pussukat/DS01455.jpg)
 
 ###### Tehtävä 6: Kaksi pussukkaa päällekkäin, reunat rullattuna ja namit punaisen pussukan sisällä
 
-[![](https://lh3.googleusercontent.com/r_6Mw9R1Ep5L-vuXyHmB2yVzIWp_GgKHzf9Z3R-VsqsgDWBi_UlN5GXMAdYeypogrqhwbQnggdkm8kIVdo7eYg9F_bcrK-flS84d1qsFlICIjHau6YEC7C6mHYJn_G2DZDrxZjl7q6ayBCDFRuKHm5alWaY4JX0tX8E5S7n7Emh5J17W7YfsVkq7LsgeJof7naO3hxtqxdVSdqYMl4mbm9R3-ZrS2YL47SFZtdnhe9t4BKnbk1wJWrHyNJ0kxrTuSIk8Rp5Cp8gSHo3evF2SRW2jVBNtF4iHN9Y-4Pr_neEfZQQg3i3q3o_FhpNe0WqBQ7Y6g-Au6WkmQKlAzZlcGqkywJYhVqo-l8mYzPE2MrG-mVvafPaRPFaL5Pmg5-4lShQUgCmYZiWDC0QgF8tu7MjOeVXMfQaAtzGr0f3X5xztFR6NmMDDYqkUNDc7U49x2J0u1Gi2ON5n9lFPwYhp-ClLHwLIS9ueScvLAgq8EELCypt---D01_d7btMFCzY48r4zjpkjkXIpZJZFWOtRDWewoeqybfzemufyKEpwAwCn-5qiEmpvBxLu7kAhS6l2vfEE=w800)](https://lh3.googleusercontent.com/r_6Mw9R1Ep5L-vuXyHmB2yVzIWp_GgKHzf9Z3R-VsqsgDWBi_UlN5GXMAdYeypogrqhwbQnggdkm8kIVdo7eYg9F_bcrK-flS84d1qsFlICIjHau6YEC7C6mHYJn_G2DZDrxZjl7q6ayBCDFRuKHm5alWaY4JX0tX8E5S7n7Emh5J17W7YfsVkq7LsgeJof7naO3hxtqxdVSdqYMl4mbm9R3-ZrS2YL47SFZtdnhe9t4BKnbk1wJWrHyNJ0kxrTuSIk8Rp5Cp8gSHo3evF2SRW2jVBNtF4iHN9Y-4Pr_neEfZQQg3i3q3o_FhpNe0WqBQ7Y6g-Au6WkmQKlAzZlcGqkywJYhVqo-l8mYzPE2MrG-mVvafPaRPFaL5Pmg5-4lShQUgCmYZiWDC0QgF8tu7MjOeVXMfQaAtzGr0f3X5xztFR6NmMDDYqkUNDc7U49x2J0u1Gi2ON5n9lFPwYhp-ClLHwLIS9ueScvLAgq8EELCypt---D01_d7btMFCzY48r4zjpkjkXIpZJZFWOtRDWewoeqybfzemufyKEpwAwCn-5qiEmpvBxLu7kAhS6l2vfEE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACQj0Nj7b0QQRJaYhOTD7Zxa/aktivointi/pussukat/DS01484-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACNWssyzEyEYoh8zWqGBaAla/aktivointi/pussukat/DS01484.jpg)
 
 ###### Tehtävä 7: Kaksi pussukkaa päällekkäin ja namit punaisen pussukan sisällä
 
-[![](https://lh3.googleusercontent.com/u7u1hDUmcKLxBJvy-KYdgsfbpPLsWmHCwedQ7B_S8gv1WmiSluADeGUF379vsPd355C6_8nbB9T357n-HYHsMp982vmo5Ic_rOagm8GtLummWyVHLwzQPumA95TGwNdKoGu4fq1ghEnt-lMUWMecJxiHH7T18cB1iVosvIJI-ZxIGKZuJ362ieGxVVxU86K1njwIMGAu1xPfLF96NtUWVDUoJcs4QgMxy0MlLJWTwIVRg2uxU0sFOICkx_1panuvGi-IDAwjIlHXs74fsOTUlhfo1if-HYTHLxzaI6l0DuMPoIcJqWicAm27Bydq2bmYbtbgkcyFAThwFu0b_Auk9oZE4FkV_KD_vgfJGk6VdM4VGpU4UbVHTuZ8-aLr297HRdQ-1-8br1a1fPtV10-cH1Hyulvy70CGzisBR8zAdpcmvCureCAuxjyq7odVJdeQxDSlUK5nY2zhUPvjWV-Xdk9fvzr63bZAhOzekmYehH0h5QL9Nx_UCHh5lirQFhXi4nx3KhRPKMbu1IBDpepiYTem2X3zE2qoJ7OVb2TDBwNmgRJ1bPbQ6SYt31Ubyd6NIbjf=w800)](https://lh3.googleusercontent.com/u7u1hDUmcKLxBJvy-KYdgsfbpPLsWmHCwedQ7B_S8gv1WmiSluADeGUF379vsPd355C6_8nbB9T357n-HYHsMp982vmo5Ic_rOagm8GtLummWyVHLwzQPumA95TGwNdKoGu4fq1ghEnt-lMUWMecJxiHH7T18cB1iVosvIJI-ZxIGKZuJ362ieGxVVxU86K1njwIMGAu1xPfLF96NtUWVDUoJcs4QgMxy0MlLJWTwIVRg2uxU0sFOICkx_1panuvGi-IDAwjIlHXs74fsOTUlhfo1if-HYTHLxzaI6l0DuMPoIcJqWicAm27Bydq2bmYbtbgkcyFAThwFu0b_Auk9oZE4FkV_KD_vgfJGk6VdM4VGpU4UbVHTuZ8-aLr297HRdQ-1-8br1a1fPtV10-cH1Hyulvy70CGzisBR8zAdpcmvCureCAuxjyq7odVJdeQxDSlUK5nY2zhUPvjWV-Xdk9fvzr63bZAhOzekmYehH0h5QL9Nx_UCHh5lirQFhXi4nx3KhRPKMbu1IBDpepiYTem2X3zE2qoJ7OVb2TDBwNmgRJ1bPbQ6SYt31Ubyd6NIbjf=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACffEzDNs_itqJjs2rz-N57a/aktivointi/pussukat/DS01505-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACciS-57Kc4ldarln_VTO5ea/aktivointi/pussukat/DS01505.jpg)
 
-[![](https://lh3.googleusercontent.com/w7AelA47yYSyrKBZjhWpk2Ij5j74FMMjkslKg4MZ4_Z3td3oU8Cx4zWURpfc7ouVt3UCk-rJ7Azh-Y0tulVDCuS_9UM1lzMyKwFP1m9bXPeNy42VAQRvdbNkph-ZJQh6BnSLHzm1WZbamYk9ykvTj-Xf5SE40kSCYKLwOTNv5fhshCy8gw5H_y3SYo_eCxG6Xty8TVtClGLNbpCxjf9VNgV5LW_8uiPUm9lJCY6yasCjCUESFI9bLdwGRnPkHTqaT7oC5SmjuopisvGC0FrZfsbZtEIZjKay8TQHyUW7ytPf-OHNw8vIsfmP3CWGtVX8e2YQlRm_ml5E-mReaLNBONGyja88fK0OZzuvOCx1OZsxi2d3P3nFPKaEAuMwcvyOeD66zbCsmjhpxa1rNVmUYBaTEH0qljAxC4-1GK_hwwoUxmf23_pqDNMVORnu33S0EtNS-6apsk7mHikmt0fryZl5_ZAUo2gf_cKnbVsR4rFRbZu5JLyMk7ys-pUwFW3BcGDEIaW9pzgwphv8Qg6g-66XR1VSTJNnx5y5rx4ZjyxFq6de3L5J0Dqtnq2pAT8fFiWd=w800)](https://lh3.googleusercontent.com/w7AelA47yYSyrKBZjhWpk2Ij5j74FMMjkslKg4MZ4_Z3td3oU8Cx4zWURpfc7ouVt3UCk-rJ7Azh-Y0tulVDCuS_9UM1lzMyKwFP1m9bXPeNy42VAQRvdbNkph-ZJQh6BnSLHzm1WZbamYk9ykvTj-Xf5SE40kSCYKLwOTNv5fhshCy8gw5H_y3SYo_eCxG6Xty8TVtClGLNbpCxjf9VNgV5LW_8uiPUm9lJCY6yasCjCUESFI9bLdwGRnPkHTqaT7oC5SmjuopisvGC0FrZfsbZtEIZjKay8TQHyUW7ytPf-OHNw8vIsfmP3CWGtVX8e2YQlRm_ml5E-mReaLNBONGyja88fK0OZzuvOCx1OZsxi2d3P3nFPKaEAuMwcvyOeD66zbCsmjhpxa1rNVmUYBaTEH0qljAxC4-1GK_hwwoUxmf23_pqDNMVORnu33S0EtNS-6apsk7mHikmt0fryZl5_ZAUo2gf_cKnbVsR4rFRbZu5JLyMk7ys-pUwFW3BcGDEIaW9pzgwphv8Qg6g-66XR1VSTJNnx5y5rx4ZjyxFq6de3L5J0Dqtnq2pAT8fFiWd=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACZtcgEYqtzpEvpFB9g2GiPa/aktivointi/pussukat/DS01550-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABMVE9-6o9VvC8f2kL4_Egca/aktivointi/pussukat/DS01550.jpg)
 
 ###### Tehtävä 8: Kaksi pussukkaa päällekkäin ja namit pussukoiden välissä
 
-[![](https://lh3.googleusercontent.com/uaRQfjeKL5PLmoWR1YuESFZhSt8k8RpTB6_dPiidGO41lPWyj_UHHILkK4g3qZ4HejrGP6eCxBcW5sigsjlvOBbZvnf_T_4syemyXPAE3KEM-x0wBL55yT1Ln4gNxce3Vem0u4rDpnXtx1DPt2zBLlYhyZqZIBSa31LyzfYvmxKanQVg4eLuQtHhZEa-hJLM5CsDVP_LJSb1IeUD7sr0KvVIICkNhBeOEvt9Q6YTvtP-N7GvmkWNB-TUdTVQHtItdXxfNTVLq0fRxhqxRGVBDpobcHdz1dFyfWVwPyBaYSKkfqBK3DnUIUyQs4Ay__ChyvYZeWIr-NcCJGnyK09oDz0E-NOgXbm2_fqlbiX7d7HhopQgLT27mAUc0s_mkut1KM0RZ4XmY3ZKrkP-ehfkmu_3328-fxHMqNR_JFPlzwcIsgqPKeeE8Cbl9rzfelKd0O8nRNdBUur2Hh0HmaRFRyR5F_9YHz0vLGKVVatQ3G6drRxlUuB6otfKWzeeVcqoRwcbCzeDw0UDpU0Ci_Kk4rFh_12BgU5r6cLlbPDo8XA1FDaHExM_IAVCzr6TGMTnGxFM=w800)](https://lh3.googleusercontent.com/uaRQfjeKL5PLmoWR1YuESFZhSt8k8RpTB6_dPiidGO41lPWyj_UHHILkK4g3qZ4HejrGP6eCxBcW5sigsjlvOBbZvnf_T_4syemyXPAE3KEM-x0wBL55yT1Ln4gNxce3Vem0u4rDpnXtx1DPt2zBLlYhyZqZIBSa31LyzfYvmxKanQVg4eLuQtHhZEa-hJLM5CsDVP_LJSb1IeUD7sr0KvVIICkNhBeOEvt9Q6YTvtP-N7GvmkWNB-TUdTVQHtItdXxfNTVLq0fRxhqxRGVBDpobcHdz1dFyfWVwPyBaYSKkfqBK3DnUIUyQs4Ay__ChyvYZeWIr-NcCJGnyK09oDz0E-NOgXbm2_fqlbiX7d7HhopQgLT27mAUc0s_mkut1KM0RZ4XmY3ZKrkP-ehfkmu_3328-fxHMqNR_JFPlzwcIsgqPKeeE8Cbl9rzfelKd0O8nRNdBUur2Hh0HmaRFRyR5F_9YHz0vLGKVVatQ3G6drRxlUuB6otfKWzeeVcqoRwcbCzeDw0UDpU0Ci_Kk4rFh_12BgU5r6cLlbPDo8XA1FDaHExM_IAVCzr6TGMTnGxFM=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAK5LVF-ZcRMlX_c9ol3Bzla/aktivointi/pussukat/DS01513-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACmEA8nnn5FEYNawswrKV8ca/aktivointi/pussukat/DS01513.jpg)
 
-[![](https://lh3.googleusercontent.com/9xdP8QIqBBn8CiR4HjD8mDiCehy2W0_F__-PAy5-NlH0iDHOh0SACZ_tPWvkrbBJbz8wwXF5Fq9_jXWNUOudOkOgP8PlGAU9j7EIITX-AgcMDjyfEo3PNx-7qY2nY0N8-SipEcqQlcSuRHqKq47ZxdLhjoBkuyIVs1xZJIxw3ZhAkZmHBsJFjwjYcLDKBGPphA4gOFfVBoQKupNqwrDcz9-yyfVs_MrisV1Hm1flyNQumzYgcjao55EUoOj01xy1hSODNrHcbC-wmM0Eh9DeygtmcjcwY69L9AjkFsUBhXvCNHgsw2eHfcVvDuBzqjCOOBTW73FUUvl3In_4vhD6LI-PDvKZhkyX2oNacijpFvbjiDrWWoOe8PA4iKd1dj0o87gvYp5e0KjQM4pVCGAXi1hC_CWEVvLFsfV_7q2QVdLO34lWEeBbyMiJw0Bx8urvwbUsfwJDDtzY69KHM5qYCbiqmYrD1nHnvtiDwymykOdYVYZzQjkv2VOFi3lNd0Y3H4jUZwSLUIE1T2_0R79-7n6z5SCGmX5Q9w8kF2fSPHw4W0j8wtSCYIXSFqN2asgjkze_=w800)](https://lh3.googleusercontent.com/9xdP8QIqBBn8CiR4HjD8mDiCehy2W0_F__-PAy5-NlH0iDHOh0SACZ_tPWvkrbBJbz8wwXF5Fq9_jXWNUOudOkOgP8PlGAU9j7EIITX-AgcMDjyfEo3PNx-7qY2nY0N8-SipEcqQlcSuRHqKq47ZxdLhjoBkuyIVs1xZJIxw3ZhAkZmHBsJFjwjYcLDKBGPphA4gOFfVBoQKupNqwrDcz9-yyfVs_MrisV1Hm1flyNQumzYgcjao55EUoOj01xy1hSODNrHcbC-wmM0Eh9DeygtmcjcwY69L9AjkFsUBhXvCNHgsw2eHfcVvDuBzqjCOOBTW73FUUvl3In_4vhD6LI-PDvKZhkyX2oNacijpFvbjiDrWWoOe8PA4iKd1dj0o87gvYp5e0KjQM4pVCGAXi1hC_CWEVvLFsfV_7q2QVdLO34lWEeBbyMiJw0Bx8urvwbUsfwJDDtzY69KHM5qYCbiqmYrD1nHnvtiDwymykOdYVYZzQjkv2VOFi3lNd0Y3H4jUZwSLUIE1T2_0R79-7n6z5SCGmX5Q9w8kF2fSPHw4W0j8wtSCYIXSFqN2asgjkze_=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACMbPg7yHpzeilXOeYmKRbRa/aktivointi/pussukat/DS01516-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADwoZSP_yD7v68pQ-dSKKX7a/aktivointi/pussukat/DS01516.jpg)
 
-[![](https://lh3.googleusercontent.com/rcd-a6_2u0vR0gd46HG26f6zpMUClhcYq_fCfvD7zYmpfZWV1qqJ_98JpGoJ5xtWPCD7ZwU83ZI_oVWFTPA3CZfUK_lpfTjNWkERiJdEMU6euFt5jdQKD2GZKg8OY3XXuD8CpXDA0FLkuY12r4bCxENdynVOk63muzujGUCpCdqsK1eRm2zMkbqQmdSenNeY4WHbsNOht01uRPL4vpQE1Srk5_k9GlpCPW78vrwwuIbVJl28aQNFIQckRVWCSfr2ajg8y2y3UrBcoeWheDaZG424G4q0v3frFGvfaS-NZ1qPJkMkTmPF3U2UzUqoVyejw7X4sGlLEuzmhhcsZes4L-X4euNLSIvHtLgNzrbC7q5WoGa69OWWz6cda_AR-4GGcsb_iDBPylLgaQxl7vJ1XiUF-Bt45Iyzwg-83Ar5ALcmQN4s1oDyHa383bGcI9dXIFo_s6fyXmlYkGBs2u2SAPB-VdouwhYgLa4KOmJWEQn7t31JBPOFiBv6QLALy2eGxw5JM8dJ63TkEQpWeSGp2crOFmVpHhyZ8KP_OkWKkZR4kA036hdRCqI1qQYqZMPGrsIH=w800)](https://lh3.googleusercontent.com/rcd-a6_2u0vR0gd46HG26f6zpMUClhcYq_fCfvD7zYmpfZWV1qqJ_98JpGoJ5xtWPCD7ZwU83ZI_oVWFTPA3CZfUK_lpfTjNWkERiJdEMU6euFt5jdQKD2GZKg8OY3XXuD8CpXDA0FLkuY12r4bCxENdynVOk63muzujGUCpCdqsK1eRm2zMkbqQmdSenNeY4WHbsNOht01uRPL4vpQE1Srk5_k9GlpCPW78vrwwuIbVJl28aQNFIQckRVWCSfr2ajg8y2y3UrBcoeWheDaZG424G4q0v3frFGvfaS-NZ1qPJkMkTmPF3U2UzUqoVyejw7X4sGlLEuzmhhcsZes4L-X4euNLSIvHtLgNzrbC7q5WoGa69OWWz6cda_AR-4GGcsb_iDBPylLgaQxl7vJ1XiUF-Bt45Iyzwg-83Ar5ALcmQN4s1oDyHa383bGcI9dXIFo_s6fyXmlYkGBs2u2SAPB-VdouwhYgLa4KOmJWEQn7t31JBPOFiBv6QLALy2eGxw5JM8dJ63TkEQpWeSGp2crOFmVpHhyZ8KP_OkWKkZR4kA036hdRCqI1qQYqZMPGrsIH=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADIija67ekSPRGyN0ueghMNa/aktivointi/pussukat/DS01576-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABWE0JV9uFI32B5rh8uBOtTa/aktivointi/pussukat/DS01576.jpg)
 
 ###### Tehtävä 9: Namit punaisen pussukan sisällä, jonka laitoin sinisen pussukan sisään suuaukko edellä
 
-[![](https://lh3.googleusercontent.com/ds70YK0kfWh7MAbfrZqk0_I56fxrp3SL2zEQRUof3OmXqjodc8Ygss7wd8A23_w4UbZ5sIzVx0Qh5lCLS1GscyU61i4Zm2xZooFZPgyvSzTS6TiKKhSv8fKJn372CRGvRBBRtFELsFYYYqYYAgleMDUWLy5yxHd_WLbI9XP1C53H3OdiUx2Jr0TDc9nit7-ziWok40D7qFYfefvD_tRmCPaQlnXeTlWiVmR1vwQl_oUIj72W0U5DduepevHPhuX6Mgj7K5t44UcfYbpg-JMoZSifDC1lY1YDOgvaXCxosOGVREL_Wf0V5lq8gTUZJpza0BR3MsSMd_Ke-FrvEcIL0RXxUBhByncgZaFlX3HMIIAA2oTvPDNlp2MgAvA08N9znv5aO8LCW37-RZavQtCV1thC67r1vSJiPuFgsNZINpEmxK6DoBJSInACKIJokI-q3pK8B2wAqSICCwIB0PzKdmPjwPwCUnmDuWnP-IjXXwikLml30LBIAb9mVn1kWx6IqIJOrcnXEWoA5zKIxf9pdEDBHyW5QJF4IzGF9G2XSu3Fdgho9eUEgN0EAUzDk8SEXh8C=w800)](https://lh3.googleusercontent.com/ds70YK0kfWh7MAbfrZqk0_I56fxrp3SL2zEQRUof3OmXqjodc8Ygss7wd8A23_w4UbZ5sIzVx0Qh5lCLS1GscyU61i4Zm2xZooFZPgyvSzTS6TiKKhSv8fKJn372CRGvRBBRtFELsFYYYqYYAgleMDUWLy5yxHd_WLbI9XP1C53H3OdiUx2Jr0TDc9nit7-ziWok40D7qFYfefvD_tRmCPaQlnXeTlWiVmR1vwQl_oUIj72W0U5DduepevHPhuX6Mgj7K5t44UcfYbpg-JMoZSifDC1lY1YDOgvaXCxosOGVREL_Wf0V5lq8gTUZJpza0BR3MsSMd_Ke-FrvEcIL0RXxUBhByncgZaFlX3HMIIAA2oTvPDNlp2MgAvA08N9znv5aO8LCW37-RZavQtCV1thC67r1vSJiPuFgsNZINpEmxK6DoBJSInACKIJokI-q3pK8B2wAqSICCwIB0PzKdmPjwPwCUnmDuWnP-IjXXwikLml30LBIAb9mVn1kWx6IqIJOrcnXEWoA5zKIxf9pdEDBHyW5QJF4IzGF9G2XSu3Fdgho9eUEgN0EAUzDk8SEXh8C=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADQhPhVPct7tAOFK8YqKj-ra/aktivointi/pussukat/DS01581-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD2bjDcHlZr_-fJm0MVSjiEa/aktivointi/pussukat/DS01581.jpg)
 
-[![](https://lh3.googleusercontent.com/iNxPKF-6Z0ZQSLtpLfMH3pOlVixTpbeHFGO21WI-Zhl738VUYVJXYcdipLv6qSAJ59Q2HzULm3LKIGfjx-MkJn4fLltrSBkoQUDWaVG5Vl8xjBcqrzyMspxO13wLd78zcx15jaIY2GZxRkcQ56VByil-YOYl0Ln2SP9ieYyh7HqjG6aaZM-S1EmeFCOCSbXjjFAPmANExW_VwnLKfNCXZjh6oFOR_7HEkAxMT6cIYoiymc7M2OW61Mo_8VUhwGhCAHPANeyVhATkB0oWqXJPnAmc0ShcTB055oRybd3lZ-10mA9n9J-2upmy6QehjwpfxdBgwnXpLPUn4DEcyFZbphEMadhzZmsbprfYenKE_UYO7yXiQ5kk4oufm8-LmerLAMRtmGWoY6O51e-KAg4zN1Gkz5C24gQRuwdsaaWlBl1ZQWNli5nUooPGu3UIA9zeoXbXLjBIMCOo5bC4D6ZuGobRWTw8J8DFeWmXnUG2PMDn-Fb9p_iThXTs4D4p4Ng5q1rlsuYLwLTMxTmLz6zwEY77576-0X9CUxaF8gnRh0upG5MJBc-ceZuxyn1vzisGQB8X=w800)](https://lh3.googleusercontent.com/iNxPKF-6Z0ZQSLtpLfMH3pOlVixTpbeHFGO21WI-Zhl738VUYVJXYcdipLv6qSAJ59Q2HzULm3LKIGfjx-MkJn4fLltrSBkoQUDWaVG5Vl8xjBcqrzyMspxO13wLd78zcx15jaIY2GZxRkcQ56VByil-YOYl0Ln2SP9ieYyh7HqjG6aaZM-S1EmeFCOCSbXjjFAPmANExW_VwnLKfNCXZjh6oFOR_7HEkAxMT6cIYoiymc7M2OW61Mo_8VUhwGhCAHPANeyVhATkB0oWqXJPnAmc0ShcTB055oRybd3lZ-10mA9n9J-2upmy6QehjwpfxdBgwnXpLPUn4DEcyFZbphEMadhzZmsbprfYenKE_UYO7yXiQ5kk4oufm8-LmerLAMRtmGWoY6O51e-KAg4zN1Gkz5C24gQRuwdsaaWlBl1ZQWNli5nUooPGu3UIA9zeoXbXLjBIMCOo5bC4D6ZuGobRWTw8J8DFeWmXnUG2PMDn-Fb9p_iThXTs4D4p4Ng5q1rlsuYLwLTMxTmLz6zwEY77576-0X9CUxaF8gnRh0upG5MJBc-ceZuxyn1vzisGQB8X=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADI-INj7rjV7UWslXjcVDtYa/aktivointi/pussukat/DS01589-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABaQiJoqNFgDNEBS8taszt9a/aktivointi/pussukat/DS01589.jpg)
 
 ###### Tehtävä 10: Namit punaisen pussukan sisällä, joka on taitettu puolivälistä kiinni ja laitettu piiloon sinisen pussukan sisään
 
-[![](https://lh3.googleusercontent.com/OjJgRDQJq7B5ScQ9hjXR3b94xRlGgmeTwj_KwKBWheUd15kiHZJwVCb0BeHX6ZpsNF_-afYFDUJ-mrHG4HDJzd_MRoZ5pYMGzqpeR0rLzFb3oCOrXa3B_JowNQ838XefI3o_IPqpoGz9SWNLmLCB-u3v6y1sLBuiTGA0QPiK41m2AhUo1FJ2f2mQoEo2yPMWJCrStxx5XgMEWfVSRMJGA6IP22bKNNizNzYcD_vqVwSi_JyGmOMbD2k0ghfaPGM4EiXa0mS8xrhjodxc8edvT46HAfzQPSZyFmmZ-hHNb22tgyN0fWsxHjc6XnaC4k6Z9Buc5wsuBCpPy-EX6sejVimjRhF9wL0WOG83HKxFvoA_SGEIqAaONF_ef6fcI96l-uJtXqt51WAtmDJ2Wbm5wEjo7N15_ILhqRn7yXSCdAnMT3cTE7BOH7dB-1psWoQ-QfbVB275yTF78iOLah0gdylCS3IcRkzOzGMJ0YSrAtECheYwxbRtKFYd7sEIQHINqBzKG21ajyZj2t_RP-VBUh7S2mjWrym74OKqQRGz7PyqK4nDi44KzqNrQT0sXaA9JgTc=w800)](https://lh3.googleusercontent.com/OjJgRDQJq7B5ScQ9hjXR3b94xRlGgmeTwj_KwKBWheUd15kiHZJwVCb0BeHX6ZpsNF_-afYFDUJ-mrHG4HDJzd_MRoZ5pYMGzqpeR0rLzFb3oCOrXa3B_JowNQ838XefI3o_IPqpoGz9SWNLmLCB-u3v6y1sLBuiTGA0QPiK41m2AhUo1FJ2f2mQoEo2yPMWJCrStxx5XgMEWfVSRMJGA6IP22bKNNizNzYcD_vqVwSi_JyGmOMbD2k0ghfaPGM4EiXa0mS8xrhjodxc8edvT46HAfzQPSZyFmmZ-hHNb22tgyN0fWsxHjc6XnaC4k6Z9Buc5wsuBCpPy-EX6sejVimjRhF9wL0WOG83HKxFvoA_SGEIqAaONF_ef6fcI96l-uJtXqt51WAtmDJ2Wbm5wEjo7N15_ILhqRn7yXSCdAnMT3cTE7BOH7dB-1psWoQ-QfbVB275yTF78iOLah0gdylCS3IcRkzOzGMJ0YSrAtECheYwxbRtKFYd7sEIQHINqBzKG21ajyZj2t_RP-VBUh7S2mjWrym74OKqQRGz7PyqK4nDi44KzqNrQT0sXaA9JgTc=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAsyfSgonmwnPOotIHXM6yba/aktivointi/pussukat/DS01605-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAABaCcCPsu227VIUjg-LwU6a/aktivointi/pussukat/DS01605.jpg)
 
-[![](https://lh3.googleusercontent.com/PyAVW6Rn4fEor0P8yFn15IiYl2Lx7nYqcPawmU1NAX20YvJHO8TS927Nw12WKPM28Fvc4F71v9rlwGhmzqrO7K_57nAlBR6q1M2Lr1ADWlKyZN_uA6jJpubUyWmp9U5jPYU5CLSV58hwsvUG0VGvDxaxY5ivRkTSsCtauc2ZLpbNKGIxOGs5gAv-Uw0betP0hCXUxDv4fDKTyZVl2h7eZwyB7ZkGuHjAlLwImt4dNvn5L6NOWuqG-jjhLv5PHgcIhZWDrD_24I1STY_WZEda7xZUtgMk_5nleurl2ucVmAq8lMaWPmJ9IGspVXNRjYpxWQqZtE2jm5aXCZwruLVzihLKlj-tg4kZ1fhmbb-03FndxIogGhKEHlaB0Mj3KqDrNW5-SJ7he4bxx9NELVBlCOIQUGXeYBPzOkrIMyhiRddP9totI_rQ6NLWR4OHqgDy2shqO8wcqFa_5MbSo5eqeUZhighrsQLzf1qREyIbG3ohX8FVcIBkDm9JnGk2asLRsHrgxNzwNtS9usbt3Euj4wcMDOk8GsRZ7szhEn8SJhghUBDEXYM2X2hr9UA8y5Hc8Ita=w800)](https://lh3.googleusercontent.com/PyAVW6Rn4fEor0P8yFn15IiYl2Lx7nYqcPawmU1NAX20YvJHO8TS927Nw12WKPM28Fvc4F71v9rlwGhmzqrO7K_57nAlBR6q1M2Lr1ADWlKyZN_uA6jJpubUyWmp9U5jPYU5CLSV58hwsvUG0VGvDxaxY5ivRkTSsCtauc2ZLpbNKGIxOGs5gAv-Uw0betP0hCXUxDv4fDKTyZVl2h7eZwyB7ZkGuHjAlLwImt4dNvn5L6NOWuqG-jjhLv5PHgcIhZWDrD_24I1STY_WZEda7xZUtgMk_5nleurl2ucVmAq8lMaWPmJ9IGspVXNRjYpxWQqZtE2jm5aXCZwruLVzihLKlj-tg4kZ1fhmbb-03FndxIogGhKEHlaB0Mj3KqDrNW5-SJ7he4bxx9NELVBlCOIQUGXeYBPzOkrIMyhiRddP9totI_rQ6NLWR4OHqgDy2shqO8wcqFa_5MbSo5eqeUZhighrsQLzf1qREyIbG3ohX8FVcIBkDm9JnGk2asLRsHrgxNzwNtS9usbt3Euj4wcMDOk8GsRZ7szhEn8SJhghUBDEXYM2X2hr9UA8y5Hc8Ita=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAoch46D6zkpBJAlCayMDlFa/aktivointi/pussukat/DS01669-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACmBxjAYmyMJnGFOod-YEmda/aktivointi/pussukat/DS01669.jpg)
 
-[![](https://lh3.googleusercontent.com/nWLHLAmS7flaJfeASqex_iWVTkgw2jzii2q_jehZodVxyMQO39BK8rZ9nn_UYzhncEwW5G7rQ1stwGK1BwtNJQHrq5Ax3E9Rl1i4kLQ7Jm1DWwe3_4kCMGxumFxeJxZkUgkb6ieH3CQz_eFxZeu5giOVPMLByDgJZIrJv5HRBsijhJQz7g2FAOrxkSpMtgZxsxRuyZUcVMhFWQ-9djiN4o9AYyFTGv5udqp5Q-Mt3Dk9nW_EX5wunm__a6kn3zW0Rl34q4cCNWeHzytFHTG0IzrmoXJ40_cMj_4zzVEqTzg6P-w7F9aHqckY3rJ57nQTk03tBBuF3A4m3CLdU5KM7xo10Mjk33q83sGJkDOwTls2zBff7LvU7JP42Sz6SYcSz9JkXUZkkugjg4kfVLiugVwcU_1IUzoeRdhj1bx6PGRfWZNVLurOAu-fjSvI-zYwmp8uwUPXG5KHzKeryELOH6_f9F7aWc9LSY98bGn1mlXL8T1hfQeMJfs0mt2dtClqkqyJWhVSCxubHwu--FVTSqSW89nvQB0FixnrWhuoBEXjwkqbHwx-maso3n5bFrbcBeiM=w800)](https://lh3.googleusercontent.com/nWLHLAmS7flaJfeASqex_iWVTkgw2jzii2q_jehZodVxyMQO39BK8rZ9nn_UYzhncEwW5G7rQ1stwGK1BwtNJQHrq5Ax3E9Rl1i4kLQ7Jm1DWwe3_4kCMGxumFxeJxZkUgkb6ieH3CQz_eFxZeu5giOVPMLByDgJZIrJv5HRBsijhJQz7g2FAOrxkSpMtgZxsxRuyZUcVMhFWQ-9djiN4o9AYyFTGv5udqp5Q-Mt3Dk9nW_EX5wunm__a6kn3zW0Rl34q4cCNWeHzytFHTG0IzrmoXJ40_cMj_4zzVEqTzg6P-w7F9aHqckY3rJ57nQTk03tBBuF3A4m3CLdU5KM7xo10Mjk33q83sGJkDOwTls2zBff7LvU7JP42Sz6SYcSz9JkXUZkkugjg4kfVLiugVwcU_1IUzoeRdhj1bx6PGRfWZNVLurOAu-fjSvI-zYwmp8uwUPXG5KHzKeryELOH6_f9F7aWc9LSY98bGn1mlXL8T1hfQeMJfs0mt2dtClqkqyJWhVSCxubHwu--FVTSqSW89nvQB0FixnrWhuoBEXjwkqbHwx-maso3n5bFrbcBeiM=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAGx5VNqk8L4PZ5ppDblu3Pa/aktivointi/pussukat/DS01631-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACjJKm1RoIFx2mXR_bE90x5a/aktivointi/pussukat/DS01631.jpg)
 
 ###### Tehtävä 11: Tennispallot esteenä
 
-[![](https://lh3.googleusercontent.com/QyADp8m_sZ0M5nCtED4V8YfuWde0lS4VmeBmVNRvnnT5WJoT0c_O0tUXfnATyp5OHQGhVP3wzU0puXJUC3gF6vaaTxO1IpjaKJltNSEf4i7tPQUS2lEOjUwui3XXOXY9DFvFk-Ra7i-9ay7zwPV6LIpnLoX3MF1gq7m2Z1idyRk6lisGgoO9cNPXVQmLoa5sA1WRSiwf2SABtjeXtRw-hrh0eYyaGRyyAref0eyycjILnyEuferAydNSuGqwTkA9TaXIwxBP5_xczn-QMvoDNZSfi5ZRVIVxUzekh3NHLZtLc7OH1xe-cG9mi_fxPsjr6uY3XwdNoeamsv8wR_aQinpsKBkh71woESwlqqfBhhGxwduysy46cZUCXZ5LJhb47cVBSeb4yhkhlVYDp6oar_q2V7MzyNmP9eJBzswuOUtbSq7KP-PcLYQEykyITa19oRVvccXbznpWdPA22XoUGCY0aFeDnromeIye8WIevPXSjMZHFWgA8-AQ9TAtlEdi5jVDc9sXXXR5ShquDzOgITqIPvR-wXyrAzUamayOcbx7smotomFMN7c12S8rj9iHBFTJ=w800)](https://lh3.googleusercontent.com/QyADp8m_sZ0M5nCtED4V8YfuWde0lS4VmeBmVNRvnnT5WJoT0c_O0tUXfnATyp5OHQGhVP3wzU0puXJUC3gF6vaaTxO1IpjaKJltNSEf4i7tPQUS2lEOjUwui3XXOXY9DFvFk-Ra7i-9ay7zwPV6LIpnLoX3MF1gq7m2Z1idyRk6lisGgoO9cNPXVQmLoa5sA1WRSiwf2SABtjeXtRw-hrh0eYyaGRyyAref0eyycjILnyEuferAydNSuGqwTkA9TaXIwxBP5_xczn-QMvoDNZSfi5ZRVIVxUzekh3NHLZtLc7OH1xe-cG9mi_fxPsjr6uY3XwdNoeamsv8wR_aQinpsKBkh71woESwlqqfBhhGxwduysy46cZUCXZ5LJhb47cVBSeb4yhkhlVYDp6oar_q2V7MzyNmP9eJBzswuOUtbSq7KP-PcLYQEykyITa19oRVvccXbznpWdPA22XoUGCY0aFeDnromeIye8WIevPXSjMZHFWgA8-AQ9TAtlEdi5jVDc9sXXXR5ShquDzOgITqIPvR-wXyrAzUamayOcbx7smotomFMN7c12S8rj9iHBFTJ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABrQL50bveyjYiywxQ9M_-ga/aktivointi/pussukat/DS01642-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACQCMJsWuFnrJVXB50l3RbAa/aktivointi/pussukat/DS01642.jpg)
 
 ###### Tehtävä 12: Korallit esteenä
 
-[![](https://lh3.googleusercontent.com/2sBxx1OdxDs69s4H_-jxMlmTPw2Ulxfy31JwA7t24-ICIbFrVnbmNvc8Zcg8rl8Q9q22_IysSuJ2c1q68nX-bkluQRzg4GjmQC-jAr0qad5dRJlHv10z0Rwx1yURPPVER6BX21TmeYkkAO52tu-fhoOh-iZt-OjwGWtqmOwLASfD_JQ8V-jkWawObBjvJ3Z3oJTU8_eIhCiZwevvUu9iYdWIrxUMOy4B_ZZ6IGK8cx-f8yak3FJq__CK-5v8x89mr1-Dd7cFopu9pzptoqCZiBC5Cy819PEtofU7iPijqucXXOdAHsi4PDLf5HjmYQlRFVU0eJ97SB25x0A-spRWq84alSnI3NR3hDVVHSSluVaNWQY5-4dOdejsgQMycWqm5HI1WEKycpR6I8SrPCfrWJdmPPtGBGlYEfT8R78cILD3jBzK1BPaKyD-wCUDPkcqO9hKsGNKEUlvvN4_PAFdh40_SG2VDHijqVCnkIGnYLYwS8l4UeE2yfGo-GV0lKCBxTECV-TOKGBs9FBoD6TLP1mzjUxjlz01WJpdQ94av_RJH8XwiWbaUitvbwHlFidt9hsc=w800)](https://lh3.googleusercontent.com/2sBxx1OdxDs69s4H_-jxMlmTPw2Ulxfy31JwA7t24-ICIbFrVnbmNvc8Zcg8rl8Q9q22_IysSuJ2c1q68nX-bkluQRzg4GjmQC-jAr0qad5dRJlHv10z0Rwx1yURPPVER6BX21TmeYkkAO52tu-fhoOh-iZt-OjwGWtqmOwLASfD_JQ8V-jkWawObBjvJ3Z3oJTU8_eIhCiZwevvUu9iYdWIrxUMOy4B_ZZ6IGK8cx-f8yak3FJq__CK-5v8x89mr1-Dd7cFopu9pzptoqCZiBC5Cy819PEtofU7iPijqucXXOdAHsi4PDLf5HjmYQlRFVU0eJ97SB25x0A-spRWq84alSnI3NR3hDVVHSSluVaNWQY5-4dOdejsgQMycWqm5HI1WEKycpR6I8SrPCfrWJdmPPtGBGlYEfT8R78cILD3jBzK1BPaKyD-wCUDPkcqO9hKsGNKEUlvvN4_PAFdh40_SG2VDHijqVCnkIGnYLYwS8l4UeE2yfGo-GV0lKCBxTECV-TOKGBs9FBoD6TLP1mzjUxjlz01WJpdQ94av_RJH8XwiWbaUitvbwHlFidt9hsc=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACuPFJqJJDYb6uqaoxmqljra/aktivointi/pussukat/DS01654-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABbRgLfUby5OdFmaOaC3jVDa/aktivointi/pussukat/DS01654.jpg)
 
-[![](https://lh3.googleusercontent.com/xFYpq3htB7Phc1cLoe_VRFAb2mRgFNqusYmKntID-QD4lCbueuz96WvtH3iOSwj8u-mg6Y36E9BOz2lQ5L1t44yvAkobtQjo3ecsGXvEJiw3snsqYCSH_UMP1H6MDfdUZwWTWVn6bPzMWgZVnuUngm5om_eivqLkYU8nOtRg1kZy6wNBtZvccK2OTN93Ps0svstJOnqWgltMhEMtZnqnx1IhJ8Fh7RLqCb_Frjnx16yeBk9pCfu4TqAZlQ9XfCFU9vR5zNE2gE482vHZOeeCaON1OPp88Q410jhaB3mcYRAITYU6VR4BsPi_BKvJ5DkXxl6cDm2foZw00SOHbeL0dDznZZhxg2bimeqOiQ_9bMBFv5j1RmKkLy8QPBONDofgQxbdJ1BroExpiaynkiyEO2y1ysrcWrId1shEtdTNHvAKL8-fldGqsYYw-vjGDzBIRv3xgNjV6KD5P4a6AA9eDxDIgE-voSy2NDq3UdN8mAXOyGFShqCknfHxKfES5OFTFhDn0qFEWPNT41dzV-qUfM7R7BSIiLUIC644H8vHdZ3ARTGpbuTu14-gqLa2aXRgJKIt=w800)](https://lh3.googleusercontent.com/xFYpq3htB7Phc1cLoe_VRFAb2mRgFNqusYmKntID-QD4lCbueuz96WvtH3iOSwj8u-mg6Y36E9BOz2lQ5L1t44yvAkobtQjo3ecsGXvEJiw3snsqYCSH_UMP1H6MDfdUZwWTWVn6bPzMWgZVnuUngm5om_eivqLkYU8nOtRg1kZy6wNBtZvccK2OTN93Ps0svstJOnqWgltMhEMtZnqnx1IhJ8Fh7RLqCb_Frjnx16yeBk9pCfu4TqAZlQ9XfCFU9vR5zNE2gE482vHZOeeCaON1OPp88Q410jhaB3mcYRAITYU6VR4BsPi_BKvJ5DkXxl6cDm2foZw00SOHbeL0dDznZZhxg2bimeqOiQ_9bMBFv5j1RmKkLy8QPBONDofgQxbdJ1BroExpiaynkiyEO2y1ysrcWrId1shEtdTNHvAKL8-fldGqsYYw-vjGDzBIRv3xgNjV6KD5P4a6AA9eDxDIgE-voSy2NDq3UdN8mAXOyGFShqCknfHxKfES5OFTFhDn0qFEWPNT41dzV-qUfM7R7BSIiLUIC644H8vHdZ3ARTGpbuTu14-gqLa2aXRgJKIt=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABWCsrkct4wSM8mEEpky4rba/aktivointi/pussukat/DS01657-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA7htxt8EjGrtvifsWPxJWya/aktivointi/pussukat/DS01657.jpg)
